avance en index y about usando scss

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplicando SASS</title>
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="turismo, viajes, vacaciones, todo para el vieje, hospedaje">
+    <title>Aplicando SASS index</title>
 </head>
 <body>
     <header>
@@ -66,5 +68,6 @@ en el camino.
         <div class="footer__icon footer__autor">Pagina hecha por Miguel Angel Valdez Ramirez</div>
     </footer>
 
+    <script src="https://kit.fontawesome.com/a48d97cbee.js" crossorigin="anonymous"></script>
 </body>
 </html>
