--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <meta name="description" content="turismo, viajes, vacaciones, todo para el vieje, hospedaje">
+    <meta name="description" content="Aqui podras encontrar todo junto para tu viaje, no pierdas el tiempo buscando">
+    <meta name="keywords" content="turismo, viajes, vacaciones,  hospedaje y todo para el vieje">
     <title>Aplicando SASS index</title>
 </head>
 <body>
