--- a/html/about.html
+++ b/html/about.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="somos turismo, para viajes, sobre vacaciones, todo para el vieje, hospedaje, conocenos">
+    <meta name="description" content="Aqui podras encontrar todo junto para tu viaje, no pierdas el tiempo buscando">
+    <meta name="keywords" content="turismo, viajes, vacaciones,  hospedaje y todo para el vieje">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Aplicando SASS About</title>
+    <title>Acerca de</title>
 </head>
 <body>
     <header>
@@ -20,10 +22,16 @@
                     <a href="../index.html" class="nav__link">Inicio</a>
                 </li>
                 <li class="nav__item">
+                    <a href="galeria.html" class="nav__link">Galeria</a>
+                </li>
+                <li class="nav__item">
+                    <a href="compromiso.html" class="nav__link">Compromiso</a>
+                </li>
+                <li class="nav__item">
                     <a href="#" class="nav__link">Acerca de </a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Contacto</a>
+                    <a href="contacto.html" class="nav__link">Contacto</a>
                 </li>
             </ul>
           </nav>
@@ -46,6 +54,7 @@
         <div class="footer__icon footer__autor">Pagina hecha por Miguel Angel Valdez Ramirez</div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a48d97cbee.js" crossorigin="anonymous"></script>
 </body>
 </html>
