correccion de errores en pagina encontrados en la pagina

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Aqui podras encontrar todo junto para tu viaje, no pierdas el tiempo buscando">
     <meta name="keywords" content="turismo, viajes, vacaciones,  hospedaje y todo para el vieje">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Index</title>
 </head>
 <body>
